# todo-app-rust-web-api

./: Cargo.toml  README.md  Rocket.toml  database.sqlite  database.sqlite-shm  diesel.toml
src/: main.rs
src/app/: server.rs
src/controllers/: todo_controller.rs
src/database/: connection.rs  mod.rs  run_db_migrations.rs
src/entities/: schema.rs
src/error_handler/: bad_request.rs  mod.rs  not_authorized.rs  not_found.rs  server_error.rs  unprocessable_entity.rs
src/migrations/2025-01-11-181729_todos/: up.sql
src/models/: todo_model.rs
src/repositories/: todo_repository.rs
src/routes/: mod.rs
src/routes/root_route/: root.rs
src/routes/todo_route/: create_todo.rs  delete_todo.rs  find_all_todo.rs  find_one_todo.rs  mod.rs  update_todo.rs
src/use_cases/: mod.rs  todo_use_case.rs
